--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
+    "start": "nodemon -L",
+    "test": "mocha -w ./tests/**/*.spec.js"
    
   },
   "author": "Henry",
